# PaddleSeg

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README_CN.md  README_EN.md  bootstrapped_cross_entropy.py  export.py  lovasz-softmax.sh  main.py  paddlelite-seg-android.md  predict.py  qa_test.sh  requirements.txt  run-ginet.sh  run-ginet_scloss.sh  run.sh  setup.py  test_ci.txt  train.py  val.py  valide.py  小规模测试.py
73docs/: MscaleOCRNet-PSA.md  RTFormer.md  TransUnet.md  UHRNet.md  UperNet.md  nnUNet.md
EISeg/: .gitignore  MANIFEST.in  README.md  README_AR.md  README_CN.md  README_EN.md  init.sh  requirements-det.txt  requirements-med.txt  requirements-rs.txt  requirements-video.txt  requirements.txt  setup.py
EISeg/med3d/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_en.md  pyproject.toml  requirments.txt
EISeg/med3d/EISegMed3D/: CMakeLists.txt  EISegMed3D.py
EISeg/med3d/EISegMed3D/Resources/UI/: EISegMed3D.ui
EISeg/med3d/EISegMed3D/Testing/Python/: CMakeLists.txt
EISeg/med3d/EISegMed3D/inference/: __init__.py  models.py  ops.py  predictor.py  preprocessing.py  to_static.py
Matting/: README.md  README_CN.md  bg_replace.py  export.py  metric.py  predict.py  requirements.txt  transforms.py
benchmark/: README.md  README_CN.md  deeplabv3p.yml  hrnet.yml  hrnet48.yml  run_all.sh  run_benchmark.sh  run_fp16.sh  run_fp32.sh
configs/: README.md  README_CN.md  README_cn.md  ce-voc-no-flip-large-stepscaling.yaml  cityscape.yaml  cityscape_fast_scnn.yaml  coco.yaml  deepglobe_road_extraction.yaml  deeplabv3p_mobilenet-1-0_pet.yaml  deeplabv3p_mobilenetv2_cityscapes.yaml  deeplabv3p_mobilenetv3_large_cityscapes.yaml  deeplabv3p_resnet50_vd_cityscapes.yaml  deeplabv3p_xception65_cityscapes.yaml  deeplabv3p_xception65_optic_kunlun.yaml  deeplabv3p_xception65_pet.yaml  fast_scnn_pet.yaml  hrnet_optic.yaml  hrnet_w18_pet.yaml  humanseg.yaml  icnet_pet.yaml  line.yaml  lovasz-softmax-voc.yaml  lovasz_hinge_deeplabv3p_mobilenet_road.yaml  lovasz_softmax_deeplabv3p_mobilenet_pascal.yaml  ocnet_w18_cityscapes.yaml  ocrnet_w18_cityscapes.yaml  pointrend_optic.yaml  pspnet.yaml  pspnet_optic.yaml  unet_mechanical_meter.yaml  unet_pet.yaml
contrib/: README.md  infer.py
dataset/: README.md  convert_voc2012.py  download_and_convert_voc2012.py  download_cityscapes.py  download_mini_deepglobe_road_extraction.py  download_mini_mechanical_industry_meter.py  download_optic.py  download_pet.py  download_util.py
deploy/: README.md
deploy/onnxruntime_cpp/: CMakeLists.txt  README.md
deploy/onnxruntime_cpp/src/: ort_session_handler.cpp  ort_session_handler.hpp  test_seg.cpp
deploy/serving/seg-serving/: CMakeLists.txt
deploy/serving/seg-serving/conf/: seg_conf.yaml
deploy/serving/seg-serving/op/: reader_op.h  seg_conf.h
deploy/serving/seg-serving/scripts/: start.sh
doc/: README.md  index.rst
docs/: API_Example.md  PP-MattingV2.md  README.md  README2.md  TopFormer.md  add_new_model.md  api_example.md  api_example_EN.md  api_example_cn.md  benchmark.md  check.md  conf.py  config.md  data_aug.md  data_prepare.md  data_prepare_cn.md  deploy.md  faq.md  index.rst  install.md  install_cn.md  installation.md  loss_select.md  loss_usage.md  lovasz_loss.md  model_export.md  model_export_cn.md  model_export_onnx.md  model_export_onnx_cn.md  model_zoo.md  model_zoo_overview.md  model_zoo_overview_cn.md  models.md  multiple_gpus_train_and_mixed_precision_train.md  nnFormer.md  pointrend.md  quick_start.md  quick_start_cn.md  release_notes.md  release_notes_cn.md  (+4 more)
docs_base/: index.rst  install.md  model_export.md  model_export_cn.md  model_export_onnx_cn.md
docs_plus/: LRASPP.md
dygraph/: README.md  __init__.py  convert_cityscapes_trainid2labelid.py  infer.py  main.py  ms_val.py  predict.py  requirements.txt  train.py  val.py  val_img.py
inference/: CMakeLists.txt  README.md  demo.cpp  infer.py  python_inference.md
legacy/: README_CN.md  requirements.txt
lite/: README.md
paddleseg/: __init__.py
pdseg/: __init__.py  check.py  data_aug.py  data_utils.py  eval.py  export_model.py  export_serving_model.py  infer.py  loss.py  lovasz_losses.py  reader.py  solver.py  train.py  vis.py
pretrained_model/: download_model.py
serving/: COMPILE_GUIDE.md  README.md  UBUNTU.md  requirements.txt
slim/: README.md  prune.py  quant.py
test/: local_test_cityscapes.py  local_test_pet.py  test_utils.py
test_tipc/: README.md  benchmark_train.sh  benchmark_train.txt  common_func.sh  compare_results.py  extract_loss.py  filter_log.py  prepare.sh  prepare_js.sh  requirements.txt  test_infer_js.sh  test_inference_cpp.sh  test_paddle2onnx.sh  test_ptq_inference_python.sh  test_serving_infer_cpp.sh  test_serving_infer_python.sh  test_train_dy2static_python.sh  test_train_inference_python.sh  test_train_inference_python_npu.sh  test_train_inference_python_xpu.sh  val.py
tests/: README.md  analyze_infer_log.py  analyze_infer_models_log.py  fcn_hrnetw18_small_v1_humanseg_192x192_mini_supervisely.yml  hrnetw18_small_v1_params.txt  model_linux_gpu_infer_js_gpu.txt  prepare.sh  prepare_js.sh  run_check_install.sh  test_infer_benchmark.sh  test_infer_dataset.sh  test_infer_js.sh  test_infer_models.sh  test_model.sh  test_ppseg_trt_speed.py
tools/: analyse.py  analyze_model.py  cal_data_prepare.py  convert_cocostuff.py  convert_gta5.py  convert_voc2010.py  create_dataset_list.py  export.py  gray2pseudo_color.py  predict.py  split_dataset_list.py  train.py  val.py  visualize_annotation.py  voc_augment.py
turtorial/: finetune_deeplabv3plus.md  finetune_fast_scnn.md  finetune_hrnet.md  finetune_icnet.md  finetune_pspnet.md  finetune_unet.md
tutorial/: finetune_deeplabv3plus.md  finetune_fast_scnn.md  finetune_ocrnet.md
uapi/: README.md  __init__.py  config.py  demo.py  model.py  model_zoo.py  models.py  repo.py
(+3950 files in other folders)
